dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/process.cc)
AC_PROG_CXX
AC_CANONICAL_SYSTEM
dnl AC_CONFIG_SUBDIRS ()
dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CONFIG_HEADER(config.h)
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(dl,dlopen)
AC_CHECK_LIB(nsl, gethostbyname)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
dnl AC_PROG_GCC_TRADITIONAL
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gethostname gettimeofday putenv select socket strerror)

AC_ARG_ENABLE(sharedlib,
[  --enable-sharedlib	  create nt2unix as shared library],
SHARED=$enableval, SHARED="no")

if test "$SHARED" = "no"  ;
then
  TARGET=staticlib
else
  TARGET=sharedlib
  if test "$CXX" = "g++" ; then
     CFLAGS="$CFLAGS -fPIC"
     CPPFLAGS="${CPPFLAGS} -fPIC"
  else
     CFLAGS="$CFLAGS -KPIC"
     CPPFLAGS="${CPPFLAGS} -KPIC"
  fi
fi

AC_SUBST(TARGET)

case "$target" in
*sparc*) CPPFLAGS="${CPPFLAGS} -Dsparc" ;;
*linux*) CPPFLAGS="${CPPFLAGS} -Dlinux" ;;
esac


AC_OUTPUT(Makefile src/Makefile tests/Makefile)
