## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.1.2.1 2004/12/20 17:26:41 tobias Exp $

noinst_LTLIBRARIES = libloop_scheduling.la

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include

SRCS = err.cpp loop.cpp loop_get.cpp loop_interface.cpp loop_partition.cpp \
       loop_static.cpp timer.cpp

libloop_scheduling_la_SOURCES = $(SRCS)

