## Process this file with automake to produce Makefile.in
## $Id$

noinst_LTLIBRARIES = libloop_scheduling.la

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include

SRCS = err.cpp loop.cpp loop_get.cpp loop_interface.cpp loop_partition.cpp \
       loop_static.cpp timer.cpp

libloop_scheduling_la_SOURCES = $(SRCS)

