## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.1.2.1 2004/12/20 17:26:42 tobias Exp $

noinst_LTLIBRARIES = libmessage_passing.la

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include

SRCS = smisendrecv.c lowlevelmp.c

libmessage_passing_la_SOURCES = $(SRCS)

