## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.1.2.1 2004/12/20 17:26:45 tobias Exp $

noinst_LTLIBRARIES = libstartup.la

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include

SRCS = sciflush.c scistartup.c smpstartup.c startup.c tcpsync.c

libstartup_la_SOURCES = $(SRCS)

